feat: Implement initial app structure with internationalization, database, routing, and admin features

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -131,6 +131,7 @@
   "loginRequired": "تسجيل الدخول مطلوب",
   "personalInformation": "المعلومات الشخصية",
   "phoneNumber": "رقم الهاتف",
+  "role": "الدور",
   "editProfile": "تعديل الملف الشخصي",
   "addUser": "إضافة مستخدم",
   "searchByNameEmailUsername": "البحث بالاسم أو البريد الإلكتروني أو اسم المستخدم...",
@@ -166,5 +167,32 @@
   },
   "nationalId": "الرقم الوطني",
   "actions": "الإجراءات",
-  "inactive": "غير نشط"
+  "inactive": "غير نشط",
+  "editUser": "تعديل المستخدم",
+  "addNewUser": "إضافة مستخدم جديد",
+  "updateUser": "تحديث المستخدم",
+  "createUser": "إنشاء مستخدم",
+  "fullNameArabic": "الاسم الكامل (بالعربية)",
+  "newPasswordHint": "كلمة المرور الجديدة (اتركها فارغة للاحتفاظ بالحالية)",
+  "usernameRequired": "اسم المستخدم مطلوب",
+  "passwordRequired": "كلمة المرور مطلوبة",
+  "emailRequired": "البريد الإلكتروني مطلوب",
+  "invalidEmail": "صيغة البريد الإلكتروني غير صحيحة",
+  "fullNameRequired": "الاسم الكامل مطلوب",
+  "userCanLogin": "يمكن للمستخدم تسجيل الدخول إلى النظام",
+  "editProperty": "تعديل العقار",
+  "addNewProperty": "إضافة عقار جديد",
+  "updateProperty": "تحديث العقار",
+  "createProperty": "إنشاء عقار",
+  "titleArabic": "العنوان (بالعربية)",
+  "descriptionArabic": "الوصف (بالعربية)",
+  "listingType": "نوع القائمة",
+  "priceRequired": "السعر مطلوب",
+  "invalidPrice": "السعر غير صحيح",
+  "areaRequired": "المساحة مطلوبة",
+  "invalidArea": "المساحة غير صحيحة",
+  "addressRequired": "العنوان مطلوب",
+  "cityRequired": "المدينة مطلوبة",
+  "countryRequired": "الدولة مطلوبة",
+  "titleRequired": "العنوان مطلوب"
 }
