--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -167,5 +167,32 @@
   },
   "nationalId": "National ID",
   "actions": "Actions",
-  "inactive": "Inactive"
+  "inactive": "Inactive",
+  "editUser": "Edit User",
+  "addNewUser": "Add New User",
+  "updateUser": "Update User",
+  "createUser": "Create User",
+  "fullNameArabic": "Full Name (Arabic)",
+  "newPasswordHint": "New Password (leave empty to keep current)",
+  "usernameRequired": "Username is required",
+  "passwordRequired": "Password is required",
+  "emailRequired": "Email is required",
+  "invalidEmail": "Invalid email format",
+  "fullNameRequired": "Full name is required",
+  "userCanLogin": "User can login to the system",
+  "editProperty": "Edit Property",
+  "addNewProperty": "Add New Property",
+  "updateProperty": "Update Property",
+  "createProperty": "Create Property",
+  "titleArabic": "Title (Arabic)",
+  "descriptionArabic": "Description (Arabic)",
+  "listingType": "Listing Type",
+  "priceRequired": "Price is required",
+  "invalidPrice": "Invalid price",
+  "areaRequired": "Area is required",
+  "invalidArea": "Invalid area",
+  "addressRequired": "Address is required",
+  "cityRequired": "City is required",
+  "countryRequired": "Country is required",
+  "titleRequired": "Title is required"
 }
