feat: Implement contract creation/editing, payment scheduling, internationalization, and dedicated contract screens.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -194,5 +194,89 @@
   "addressRequired": "العنوان مطلوب",
   "cityRequired": "المدينة مطلوبة",
   "countryRequired": "الدولة مطلوبة",
-  "titleRequired": "العنوان مطلوب"
+  "titleRequired": "العنوان مطلوب",
+  "lease": "إيجار",
+  "purchase": "شراء",
+  "leaseContracts": "عقود الإيجار",
+  "purchaseContracts": "عقود الشراء",
+  "newContract": "عقد جديد",
+  "editContract": "تعديل العقد",
+  "createContract": "إنشاء",
+  "updateContract": "تحديث",
+  "contractDetails": "تفاصيل العقد",
+  "contractId": "رقم العقد",
+  "propertyId": "رقم العقار",
+  "ownerId": "رقم المالك",
+  "tenantId": "رقم المستأجر",
+  "buyerId": "رقم المشتري",
+  "selectOwner": "اختر المالك",
+  "selectProperty": "اختر العقار",
+  "selectTenant": "اختر المستأجر",
+  "selectBuyer": "اختر المشتري",
+  "monthlyLeaseAmount": "قيمة الإيجار الشهري",
+  "purchasePrice": "سعر الشراء",
+  "concessions": "التنازلات",
+  "uploadContractImage": "رفع صورة العقد",
+  "imageSelected": "تم اختيار الصورة",
+  "contractType": "نوع العقد",
+  "required": "مطلوب",
+  "pleaseSelectOwnerPropertyTenantBuyer": "الرجاء اختيار المالك والعقار والمستأجر/المشتري",
+  "descriptionEn": "الوصف (بالإنجليزية)",
+  "descriptionAr": "الوصف (بالعربية)",
+  "paymentSchedule": "جدول الدفع",
+  "paymentFrequency": "تكرار الدفع",
+  "monthly": "شهري",
+  "quarterly": "ربع سنوي",
+  "semiAnnual": "نصف سنوي",
+  "annual": "سنوي",
+  "custom": "مخصص",
+  "customFrequencyDays": "التكرار المخصص (بالأيام)",
+  "customFrequencyHint": "مثال: 45",
+  "requiredForCustomFrequency": "مطلوب للتكرار المخصص",
+  "mustBePositiveNumber": "يجب أن يكون رقماً موجباً",
+  "previewPaymentSchedule": "معاينة جدول الدفع",
+  "pleaseSelectEndDateFirst": "الرجاء اختيار تاريخ الانتهاء أولاً",
+  "pleaseEnterValidAmount": "الرجاء إدخال مبلغ صحيح",
+  "paymentsInstallments": "الدفعات / الأقساط",
+  "addPayment": "إضافة دفعة",
+  "noPaymentsRecorded": "لا توجد دفعات مسجلة.",
+  "payNow": "ادفع الآن",
+  "receipt": "إيصال",
+  "processingPayment": "جاري معالجة الدفع...",
+  "paymentProcessedSuccessfully": "تمت معالجة الدفع بنجاح!",
+  "paymentFailed": "فشل الدفع",
+  "notes": "ملاحظات",
+  "overdue": "متأخر",
+  "paymentStatus": "حالة الدفع",
+  "installmentNumber": "رقم القسط",
+  "totalAmount": "المبلغ الإجمالي",
+  "paidAmount": "المبلغ المدفوع",
+  "remainingBalance": "الرصيد المتبقي",
+  "paymentSchedulePreview": "معاينة جدول الدفع",
+  "due": "مستحق",
+  "close": "إغلاق",
+  "installmentDetails": "تفاصيل القسط",
+  "generatingSchedule": "جاري إنشاء الجدول...",
+  "cash": "نقدي",
+  "creditCard": "بطاقة ائتمان",
+  "bankTransfer": "تحويل بنكي",
+  "check": "شيك",
+  "online": "عبر الإنترنت",
+  "contractCreatedSuccessfully": "تم إنشاء العقد بنجاح",
+  "contractUpdatedSuccessfully": "تم تحديث العقد بنجاح",
+  "contractDeletedSuccessfully": "تم حذف العقد بنجاح",
+  "errorCreatingContract": "خطأ في إنشاء العقد",
+  "errorUpdatingContract": "خطأ في تحديث العقد",
+  "errorDeletingContract": "خطأ في حذف العقد",
+  "errorLoadingContracts": "خطأ في تحميل العقود",
+  "errorLoadingPayments": "خطأ في تحميل الدفعات",
+  "noContractsFound": "لم يتم العثور على عقود",
+  "deleteContract": "حذف العقد",
+  "deleteContractConfirmation": "هل أنت متأكد من حذف هذا العقد؟",
+  "generatePDF": "إنشاء PDF",
+  "forSale": "للبيع",
+  "propertyStatus": "حالة العقار",
+  "selectDate": "اختر التاريخ",
+  "selectEndDate": "اختر تاريخ الانتهاء",
+  "selectStartDate": "اختر تاريخ البدء"
 }
