--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -194,5 +194,89 @@
   "addressRequired": "Address is required",
   "cityRequired": "City is required",
   "countryRequired": "Country is required",
-  "titleRequired": "Title is required"
+  "titleRequired": "Title is required",
+  "lease": "Lease",
+  "purchase": "Purchase",
+  "leaseContracts": "Lease Contracts",
+  "purchaseContracts": "Purchase Contracts",
+  "newContract": "New Contract",
+  "editContract": "Edit Contract",
+  "createContract": "Create",
+  "updateContract": "Update",
+  "contractDetails": "Contract Details",
+  "contractId": "Contract ID",
+  "propertyId": "Property ID",
+  "ownerId": "Owner ID",
+  "tenantId": "Tenant ID",
+  "buyerId": "Buyer ID",
+  "selectOwner": "Select Owner",
+  "selectProperty": "Select Property",
+  "selectTenant": "Select Tenant",
+  "selectBuyer": "Select Buyer",
+  "monthlyLeaseAmount": "Monthly Lease Amount",
+  "purchasePrice": "Purchase Price",
+  "concessions": "Concessions",
+  "uploadContractImage": "Upload Contract Image",
+  "imageSelected": "Image Selected",
+  "contractType": "Contract Type",
+  "required": "Required",
+  "pleaseSelectOwnerPropertyTenantBuyer": "Please select owner, property, and tenant/buyer",
+  "descriptionEn": "Description (En)",
+  "descriptionAr": "Description (Ar)",
+  "paymentSchedule": "Payment Schedule",
+  "paymentFrequency": "Payment Frequency",
+  "monthly": "Monthly",
+  "quarterly": "Quarterly",
+  "semiAnnual": "Semi-Annual",
+  "annual": "Annual",
+  "custom": "Custom",
+  "customFrequencyDays": "Custom Frequency (days)",
+  "customFrequencyHint": "e.g., 45",
+  "requiredForCustomFrequency": "Required for custom frequency",
+  "mustBePositiveNumber": "Must be a positive number",
+  "previewPaymentSchedule": "Preview Payment Schedule",
+  "pleaseSelectEndDateFirst": "Please select an end date first",
+  "pleaseEnterValidAmount": "Please enter a valid amount",
+  "paymentsInstallments": "Payments / Installments",
+  "addPayment": "Add Payment",
+  "noPaymentsRecorded": "No payments recorded.",
+  "payNow": "Pay Now",
+  "receipt": "Receipt",
+  "processingPayment": "Processing payment...",
+  "paymentProcessedSuccessfully": "Payment processed successfully!",
+  "paymentFailed": "Payment failed",
+  "notes": "Notes",
+  "overdue": "Overdue",
+  "paymentStatus": "Payment Status",
+  "installmentNumber": "Installment Number",
+  "totalAmount": "Total Amount",
+  "paidAmount": "Paid Amount",
+  "remainingBalance": "Remaining Balance",
+  "paymentSchedulePreview": "Payment Schedule Preview",
+  "due": "Due",
+  "close": "Close",
+  "installmentDetails": "Installment Details",
+  "generatingSchedule": "Generating schedule...",
+  "cash": "Cash",
+  "creditCard": "Credit Card",
+  "bankTransfer": "Bank Transfer",
+  "check": "Check",
+  "online": "Online",
+  "contractCreatedSuccessfully": "Contract created successfully",
+  "contractUpdatedSuccessfully": "Contract updated successfully",
+  "contractDeletedSuccessfully": "Contract deleted successfully",
+  "errorCreatingContract": "Error creating contract",
+  "errorUpdatingContract": "Error updating contract",
+  "errorDeletingContract": "Error deleting contract",
+  "errorLoadingContracts": "Error loading contracts",
+  "errorLoadingPayments": "Error loading payments",
+  "noContractsFound": "No contracts found",
+  "deleteContract": "Delete Contract",
+  "deleteContractConfirmation": "Are you sure you want to delete this contract?",
+  "generatePDF": "Generate PDF",
+  "forSale": "For Sale",
+  "propertyStatus": "Property Status",
+  "selectDate": "Select Date",
+  "selectEndDate": "Select End Date",
+  "selectStartDate": "Select Start Date"
 }
