feat: Add Drift database schema for real estate data and implement property management screen with i18n support.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -52,11 +52,23 @@
   "pending": "قيد الانتظار",
   "sale": "بيع",
   "rent": "إيجار",
+  "category": "الفئة",
+  "residential": "سكني",
+  "commercial": "تجاري",
+  "penthouse": "بنتاهاوس",
+  "townhouse": "تاون هاوس",
+  "chalet": "شاليه",
+  "twinHouse": "توين هاوس",
+  "duplex": "دوبلكس",
+  "office": "مكتب",
+  "business": "أعمال",
+  "industrial": "صناعي",
+  "commercialStore": "محل تجاري",
+  "medical": "طبي",
   "apartment": "شقة",
   "house": "منزل",
   "villa": "فيلا",
   "land": "أرض",
-  "commercial": "تجاري",
   "startDate": "تاريخ البدء",
   "endDate": "تاريخ الانتهاء",
   "monthlyRent": "الإيجار الشهري",
