--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -52,11 +52,23 @@
   "pending": "Pending",
   "sale": "Sale",
   "rent": "Rent",
+  "category": "Category",
+  "residential": "Residential",
+  "commercial": "Commercial",
+  "penthouse": "Penthouse",
+  "townhouse": "Townhouse",
+  "chalet": "Chalet",
+  "twinHouse": "Twin House",
+  "duplex": "Duplex",
+  "office": "Office",
+  "business": "Business",
+  "industrial": "Industrial",
+  "commercialStore": "Commercial Store",
+  "medical": "Medical",
   "apartment": "Apartment",
   "house": "House",
   "villa": "Villa",
   "land": "Land",
-  "commercial": "Commercial",
   "startDate": "Start Date",
   "endDate": "End Date",
   "monthlyRent": "Monthly Rent",
