feat: Implement core application structure, internationalization, routing, database, and initial admin/buyer features with new screens and widgets.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -93,6 +93,30 @@
   "accepted": "مقبول",
   "rejected": "مرفوض",
   "negotiating": "قيد التفاوض",
+  "propertyRequest": "طلب عقار",
+  "placeRequest": "تقديم طلب",
+  "urgency": "الاستعجال",
+  "sooner": "في أقرب وقت",
+  "afterAWhile": "بعد فترة",
+  "canWait": "يمكن الانتظار",
+  "minPrice": "الحد الأدنى للسعر",
+  "maxPrice": "الحد الأقصى للسعر",
+  "preferredLocation": "الموقع المفضل",
+  "requestStatus": "حالة الطلب",
+  "buyerRequests": "طلبات المشترين",
+  "notification": "إشعار",
+  "notifications": "الإشعارات",
+  "requestDetails": "تفاصيل الطلب",
+  "changeStatus": "تغيير الحالة",
+  "confirmed": "مؤكد",
+  "markAsRead": "وضع علامة كمقروء",
+  "noNotifications": "لا توجد إشعارات",
+  "noRequests": "لا توجد طلبات",
+  "requestSubmitted": "تم تقديم الطلب بنجاح",
+  "statusUpdated": "تم تحديث الحالة بنجاح",
+  "optional": "اختياري",
+  "noBuyersFound": "لا يوجد مشترون في النظام",
+  "location": "الموقع",
   "theme": "المظهر",
   "language": "اللغة",
   "lightMode": "الوضع الفاتح",
