--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -93,6 +93,30 @@
   "accepted": "Accepted",
   "rejected": "Rejected",
   "negotiating": "Negotiating",
+  "propertyRequest": "Property Request",
+  "placeRequest": "Place Request",
+  "urgency": "Urgency",
+  "sooner": "Sooner",
+  "afterAWhile": "After a while",
+  "canWait": "Can wait",
+  "minPrice": "Min Price",
+  "maxPrice": "Max Price",
+  "preferredLocation": "Preferred Location",
+  "requestStatus": "Request Status",
+  "buyerRequests": "Buyer Requests",
+  "notification": "Notification",
+  "notifications": "Notifications",
+  "requestDetails": "Request Details",
+  "changeStatus": "Change Status",
+  "confirmed": "Confirmed",
+  "markAsRead": "Mark as Read",
+  "noNotifications": "No notifications",
+  "noRequests": "No requests found",
+  "requestSubmitted": "Request submitted successfully",
+  "statusUpdated": "Status updated successfully",
+  "optional": "Optional",
+  "noBuyersFound": "No buyers found",
+  "location": "Location",
   "theme": "Theme",
   "language": "Language",
   "lightMode": "Light Mode",
