feat: Set up initial Flutter real estate app with Drift database, routing, localization, and admin basic data management.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -335,5 +335,35 @@
   "discardChangesConfirmation": "لديك تغييرات غير محفوظة. هل أنت متأكد أنك تريد تجاهلها؟",
   "discard": "تجاهل",
   "floor": "طابق",
-  "shop": "محل"
+  "shop": "محل",
+  "basicData": "البيانات الأساسية",
+  "basicDataManagement": "إدارة البيانات الأساسية",
+  "nationalities": "الجنسيات",
+  "roomTypes": "أنواع الغرف",
+  "unitDescriptions": "أوصاف الوحدات",
+  "propertyTypes": "أنواع العقارات",
+  "regions": "المناطق",
+  "provinces": "المحافظات",
+  "cities": "المدن",
+  "services": "الخدمات",
+  "currencies": "العملات",
+  "addNew": "إضافة جديد",
+  "nameEnglish": "الاسم (إنجليزي)",
+  "nameArabic": "الاسم (عربي)",
+  "region": "المنطقة",
+  "province": "المحافظة",
+  "filterByRegion": "تصفية حسب المنطقة",
+  "filterByProvince": "تصفية حسب المحافظة",
+  "allRegions": "جميع المناطق",
+  "allProvinces": "جميع المحافظات",
+  "pleaseSelectRegion": "الرجاء اختيار المنطقة",
+  "pleaseSelectProvince": "الرجاء اختيار المحافظة",
+  "details": "التفاصيل",
+  "name": "الاسم",
+  "code": "الرمز",
+  "symbol": "الرمز",
+  "exchangeRate": "سعر الصرف",
+  "codeExample": "الرمز (مثال: USD)",
+  "noItemsFound": "لم يتم العثور على عناصر",
+  "searchPlaceholder": "بحث..."
 }
