--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -336,5 +336,35 @@
   "discardChangesConfirmation": "You have unsaved changes. Are you sure you want to discard them?",
   "discard": "Discard",
   "floor": "Floor",
-  "shop": "Shop"
+  "shop": "Shop",
+  "basicData": "Basic Data",
+  "basicDataManagement": "Basic Data Management",
+  "nationalities": "Nationalities",
+  "roomTypes": "Room Types",
+  "unitDescriptions": "Unit Descriptions",
+  "propertyTypes": "Property Types",
+  "regions": "Regions",
+  "provinces": "Provinces",
+  "cities": "Cities",
+  "services": "Services",
+  "currencies": "Currencies",
+  "addNew": "Add New",
+  "nameEnglish": "Name (English)",
+  "nameArabic": "Name (Arabic)",
+  "region": "Region",
+  "province": "Province",
+  "filterByRegion": "Filter by Region",
+  "filterByProvince": "Filter by Province",
+  "allRegions": "All Regions",
+  "allProvinces": "All Provinces",
+  "pleaseSelectRegion": "Please select a Region",
+  "pleaseSelectProvince": "Please select a Province",
+  "details": "Details",
+  "name": "Name",
+  "code": "Code",
+  "symbol": "Symbol",
+  "exchangeRate": "Exchange Rate",
+  "codeExample": "Code (e.g. USD)",
+  "noItemsFound": "No items found",
+  "searchPlaceholder": "Search..."
 }
