feat: Add internationalization support for English and Arabic, login screen, and contract payments modal.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -572,5 +572,7 @@
   "noItemsFound": "لم يتم العثور على عناصر",
   "searchPlaceholder": "بحث...",
   "change": "تغيير",
-  "remove": "إزالة"
+  "remove": "إزالة",
+  "defaultCredentials": "بيانات الدخول الافتراضية",
+  "copy": "نسخ"
 }
