feat: Add internationalization for English and Arabic, alongside new contract, payment, and company information features.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -362,217 +362,35 @@
   "companyAddressEn": "العنوان (إنجليزي)",
   "companyAddressAr": "العنوان (عربي)",
   "vatNumber": "الرقم الضريبي",
-  "role": "الدور",
-  "editProfile": "تعديل الملف الشخصي",
-  "addUser": "إضافة مستخدم",
-  "searchByNameEmailUsername": "البحث بالاسم أو البريد الإلكتروني أو اسم المستخدم...",
-  "all": "الكل",
-  "noUsersFound": "لم يتم العثور على مستخدمين",
-  "userCreatedSuccessfully": "تم إنشاء المستخدم بنجاح",
-  "userUpdatedSuccessfully": "تم تحديث المستخدم بنجاح",
-  "userDeletedSuccessfully": "تم حذف المستخدم بنجاح",
-  "deleteUser": "حذف المستخدم",
-  "deleteUserConfirmation": "هل أنت متأكد من حذف {name}؟ لا يمكن التراجع عن هذا الإجراء.",
-  "@deleteUserConfirmation": {
-    "placeholders": {
-      "name": {
-        "type": "String"
-      }
-    }
-  },
-  "errorLoadingUsers": "خطأ في تحميل المستخدمين: {error}",
-  "@errorLoadingUsers": {
-    "placeholders": {
-      "error": {
-        "type": "String"
-      }
-    }
-  },
-  "errorDeletingUser": "خطأ في حذف المستخدم: {error}",
-  "@errorDeletingUser": {
-    "placeholders": {
-      "error": {
-        "type": "String"
-      }
-    }
-  },
-  "nationalId": "الرقم الوطني",
-  "actions": "الإجراءات",
-  "inactive": "غير نشط",
-  "editUser": "تعديل المستخدم",
-  "addNewUser": "إضافة مستخدم جديد",
-  "updateUser": "تحديث المستخدم",
-  "createUser": "إنشاء مستخدم",
-  "fullNameArabic": "الاسم الكامل (بالعربية)",
-  "newPasswordHint": "كلمة المرور الجديدة (اتركها فارغة للاحتفاظ بالحالية)",
-  "usernameRequired": "اسم المستخدم مطلوب",
-  "passwordRequired": "كلمة المرور مطلوبة",
-  "emailRequired": "البريد الإلكتروني مطلوب",
-  "invalidEmail": "صيغة البريد الإلكتروني غير صحيحة",
-  "fullNameRequired": "الاسم الكامل مطلوب",
-  "userCanLogin": "يمكن للمستخدم تسجيل الدخول إلى النظام",
-  "editProperty": "تعديل العقار",
-  "addNewProperty": "إضافة عقار جديد",
-  "updateProperty": "تحديث العقار",
-  "createProperty": "إنشاء عقار",
-  "titleArabic": "العنوان (بالعربية)",
-  "descriptionArabic": "الوصف (بالعربية)",
-  "listingType": "نوع القائمة",
-  "priceRequired": "السعر مطلوب",
-  "invalidPrice": "السعر غير صحيح",
-  "areaRequired": "المساحة مطلوبة",
-  "invalidArea": "المساحة غير صحيحة",
-  "addressRequired": "العنوان مطلوب",
-  "cityRequired": "المدينة مطلوبة",
-  "countryRequired": "الدولة مطلوبة",
-  "titleRequired": "العنوان مطلوب",
-  "lease": "إيجار",
-  "purchase": "شراء",
-  "leaseContracts": "عقود الإيجار",
-  "purchaseContracts": "عقود الشراء",
-  "newContract": "عقد جديد",
-  "editContract": "تعديل العقد",
-  "createContract": "إنشاء",
-  "updateContract": "تحديث",
-  "contractDetails": "تفاصيل العقد",
-  "contractId": "رقم العقد",
-  "propertyId": "رقم العقار",
-  "ownerId": "رقم المالك",
-  "tenantId": "رقم المستأجر",
-  "buyerId": "رقم المشتري",
-  "selectOwner": "اختر المالك",
-  "selectProperty": "اختر العقار",
-  "selectTenant": "اختر المستأجر",
-  "selectBuyer": "اختر المشتري",
-  "monthlyLeaseAmount": "قيمة الإيجار الشهري",
-  "purchasePrice": "سعر الشراء",
-  "concessions": "التنازلات",
-  "uploadContractImage": "رفع صورة العقد",
-  "imageSelected": "تم اختيار الصورة",
-  "contractType": "نوع العقد",
-  "required": "مطلوب",
-  "pleaseSelectOwnerPropertyTenantBuyer": "الرجاء اختيار المالك والعقار والمستأجر/المشتري",
-  "descriptionEn": "الوصف (بالإنجليزية)",
-  "descriptionAr": "الوصف (بالعربية)",
-  "paymentSchedule": "جدول الدفع",
-  "paymentFrequency": "تكرار الدفع",
-  "monthly": "شهري",
-  "quarterly": "ربع سنوي",
-  "semiAnnual": "نصف سنوي",
-  "annual": "سنوي",
-  "custom": "مخصص",
-  "customFrequencyDays": "التكرار المخصص (بالأيام)",
-  "customFrequencyHint": "مثال: 45",
-  "requiredForCustomFrequency": "مطلوب للتكرار المخصص",
-  "mustBePositiveNumber": "يجب أن يكون رقماً موجباً",
-  "previewPaymentSchedule": "معاينة جدول الدفع",
-  "pleaseSelectEndDateFirst": "الرجاء اختيار تاريخ الانتهاء أولاً",
-  "pleaseEnterValidAmount": "الرجاء إدخال مبلغ صحيح",
-  "paymentsInstallments": "الدفعات / الأقساط",
-  "addPayment": "إضافة دفعة",
-  "noPaymentsRecorded": "لا توجد دفعات مسجلة.",
-  "payNow": "ادفع الآن",
-  "receipt": "إيصال",
-  "processingPayment": "جاري معالجة الدفع...",
-  "paymentProcessedSuccessfully": "تمت معالجة الدفع بنجاح!",
-  "paymentFailed": "فشل الدفع",
-  "notes": "ملاحظات",
-  "overdue": "متأخر",
-  "paymentStatus": "حالة الدفع",
-  "installmentNumber": "رقم القسط",
-  "totalAmount": "المبلغ الإجمالي",
-  "paidAmount": "المبلغ المدفوع",
-  "remainingBalance": "الرصيد المتبقي",
-  "paymentSchedulePreview": "معاينة جدول الدفع",
-  "due": "مستحق",
-  "close": "إغلاق",
-  "installmentDetails": "تفاصيل القسط",
-  "generatingSchedule": "جاري إنشاء الجدول...",
-  "cash": "نقدي",
-  "creditCard": "بطاقة ائتمان",
-  "bankTransfer": "تحويل بنكي",
-  "check": "شيك",
-  "online": "عبر الإنترنت",
-  "contractCreatedSuccessfully": "تم إنشاء العقد بنجاح",
-  "contractUpdatedSuccessfully": "تم تحديث العقد بنجاح",
-  "contractDeletedSuccessfully": "تم حذف العقد بنجاح",
-  "errorCreatingContract": "خطأ في إنشاء العقد",
-  "errorUpdatingContract": "خطأ في تحديث العقد",
-  "errorDeletingContract": "خطأ في حذف العقد",
-  "errorLoadingContracts": "خطأ في تحميل العقود",
-  "errorLoadingPayments": "خطأ في تحميل الدفعات",
-  "noContractsFound": "لم يتم العثور على عقود",
-  "deleteContract": "حذف العقد",
-  "deleteContractConfirmation": "هل أنت متأكد من حذف هذا العقد؟",
-  "generatePDF": "إنشاء PDF",
-  "forSale": "للبيع",
-  "propertyStatus": "حالة العقار",
-  "selectDate": "اختر التاريخ",
-  "selectEndDate": "اختر تاريخ الانتهاء",
-  "selectStartDate": "اختر تاريخ البدء",
-  "date": "التاريخ",
-  "signature": "التوقيع",
-  "ownerSignature": "توقيع المالك",
-  "tenantSignature": "توقيع المستأجر",
-  "buyerSignature": "توقيع المشتري",
-  "building": "مبنى",
-  "units": "الوحدات",
-  "manageUnits": "إدارة الوحدات",
-  "unitType": "نوع الوحدة",
-  "unitNumber": "رقم الوحدة",
-  "floorNumber": "رقم الطابق",
-  "noUnitsFound": "لا توجد وحدات",
-  "addUnit": "إضافة وحدة",
-  "editUnit": "تعديل الوحدة",
-  "deleteUnit": "حذف الوحدة",
-  "deleteUnitConfirmation": "هل أنت متأكد من حذف هذه الوحدة؟",
-  "discardChanges": "تجاهل التغييرات؟",
-  "discardChangesConfirmation": "لديك تغييرات غير محفوظة. هل أنت متأكد أنك تريد تجاهلها؟",
-  "discard": "تجاهل",
-  "floor": "طابق",
-  "shop": "محل",
-  "basicData": "البيانات الأساسية",
-  "basicDataManagement": "إدارة البيانات الأساسية",
-  "nationalities": "الجنسيات",
-  "roomTypes": "أنواع الغرف",
-  "unitDescriptions": "أوصاف الوحدات",
-  "propertyTypes": "أنواع العقارات",
-  "regions": "المناطق",
-  "provinces": "المحافظات",
-  "cities": "المدن",
-  "services": "الخدمات",
-  "currencies": "العملات",
-  "addNew": "إضافة جديد",
-  "nameEnglish": "الاسم (إنجليزي)",
-  "nameArabic": "الاسم (عربي)",
-  "region": "المنطقة",
-  "province": "المحافظة",
-  "filterByRegion": "تصفية حسب المنطقة",
-  "filterByProvince": "تصفية حسب المحافظة",
-  "allRegions": "جميع المناطق",
-  "allProvinces": "جميع المحافظات",
-  "details": "التفاصيل",
-  "name": "الاسم",
-  "code": "الرمز",
-  "symbol": "الرمز",
-  "exchangeRate": "سعر الصرف",
-  "codeExample": "الرمز (مثال: USD)",
-  "companySettings": "إعدادات الشركة",
-  "companyNameEn": "اسم الشركة (إنجليزي)",
-  "companyNameAr": "اسم الشركة (عربي)",
-  "companyAddressEn": "العنوان (إنجليزي)",
-  "companyAddressAr": "العنوان (عربي)",
-  "vatNumber": "الرقم الضريبي",
   "crn": "رقم السجل التجاري",
   "website": "الموقع الإلكتروني",
   "uploadLogo": "رفع الشعار",
   "logo": "الشعار",
   "companyInfoSaved": "تم حفظ معلومات الشركة بنجاح",
-  "email": "البريد الإلكتروني",
   "noItemsFound": "لم يتم العثور على عناصر",
   "searchPlaceholder": "بحث...",
   "change": "تغيير",
   "remove": "إزالة",
   "defaultCredentials": "بيانات الدخول الافتراضية",
-  "copy": "نسخ"
+  "copy": "نسخ",
+  "totalAmountMustBePositive": "يجب أن يكون المبلغ الإجمالي موجباً",
+  "endDateMustBeAfterStartDate": "يجب أن يكون تاريخ الانتهاء بعد تاريخ البدء",
+  "customFrequencyRequiresPositiveDays": "يتطلب التكرار المخصص عدداً موجباً من الأيام",
+  "invalidContractDuration": "مدة العقد غير صالحة للتكرار المحدد",
+  "paymentReceipt": "إيصال دفع",
+  "paymentInformation": "معلومات الدفع",
+  "amountPaid": "المبلغ المدفوع",
+  "contractInformation": "معلومات العقد",
+  "payer": "الدافع",
+  "thankYouForPayment": "شكراً لدفعكم",
+  "generatedOn": "تم الإنشاء في",
+  "kitchens": "المطابخ",
+  "pleaseSelectRegion": "الرجاء اختيار المنطقة",
+  "pleaseSelectProvince": "الرجاء اختيار المحافظة",
+  "details": "التفاصيل",
+  "name": "الاسم",
+  "code": "الرمز",
+  "symbol": "الرمز",
+  "exchangeRate": "سعر الصرف",
+  "codeExample": "الرمز (مثال: USD)"
 }
