feat: Implement internationalization with English and Arabic support and add settings screen.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -326,6 +326,7 @@
   "unitType": "نوع الوحدة",
   "unitNumber": "رقم الوحدة",
   "floorNumber": "رقم الطابق",
+  "kitchens": "المطابخ",
   "noUnitsFound": "لا توجد وحدات",
   "addUnit": "إضافة وحدة",
   "editUnit": "تعديل الوحدة",
@@ -356,6 +357,16 @@
   "filterByProvince": "تصفية حسب المحافظة",
   "allRegions": "جميع المناطق",
   "allProvinces": "جميع المحافظات",
+  "pleaseSelectRegion": "الرجاء اختيار المنطقة",
+  "pleaseSelectProvince": "الرجاء اختيار المحافظة",
+  "details": "التفاصيل",
+  "name": "الاسم",
+  "code": "الرمز",
+  "symbol": "الرمز",
+  "exchangeRate": "سعر الصرف",
+  "codeExample": "الرمز (مثال: USD)",
+  "noItemsFound": "لم يتم العثور على عناصر",
+  "searchPlaceholder": "بحث...",
   "companySettings": "إعدادات الشركة",
   "companyNameEn": "اسم الشركة (إنجليزي)",
   "companyNameAr": "اسم الشركة (عربي)",
@@ -367,8 +378,6 @@
   "uploadLogo": "رفع الشعار",
   "logo": "الشعار",
   "companyInfoSaved": "تم حفظ معلومات الشركة بنجاح",
-  "noItemsFound": "لم يتم العثور على عناصر",
-  "searchPlaceholder": "بحث...",
   "change": "تغيير",
   "remove": "إزالة",
   "defaultCredentials": "بيانات الدخول الافتراضية",
@@ -384,13 +393,31 @@
   "payer": "الدافع",
   "thankYouForPayment": "شكراً لدفعكم",
   "generatedOn": "تم الإنشاء في",
-  "kitchens": "المطابخ",
-  "pleaseSelectRegion": "الرجاء اختيار المنطقة",
-  "pleaseSelectProvince": "الرجاء اختيار المحافظة",
-  "details": "التفاصيل",
-  "name": "الاسم",
-  "code": "الرمز",
-  "symbol": "الرمز",
-  "exchangeRate": "سعر الصرف",
-  "codeExample": "الرمز (مثال: USD)"
+  "on": "مفعل",
+  "off": "معطل",
+  "blue": "أزرق",
+  "green": "أخضر",
+  "purple": "بنفسجي",
+  "languageLabel": "اللغة",
+  "manageCompanyDetails": "إدارة تفاصيل الشركة والشعار",
+  "apiConfiguration": "إعدادات API",
+  "apiUrlPlaceholder": "https://api.example.com",
+  "saveApiUrl": "حفظ رابط API",
+  "apiUrlSaved": "تم حفظ رابط API",
+  "enableDataSync": "تفعيل مزامنة البيانات مع الخادم",
+  "dataManagement": "إدارة البيانات",
+  "clearAllData": "مسح جميع البيانات",
+  "deleteAllBusinessData": "حذف جميع بيانات الأعمال من التطبيق",
+  "clearAllDataTitle": "مسح جميع البيانات؟",
+  "clearAllDataMessage": "سيؤدي هذا إلى حذف جميع المستخدمين والعقارات والعقود وبيانات الأعمال الأخرى بشكل دائم. لا يمكن التراجع عن هذا الإجراء.",
+  "clearData": "مسح البيانات",
+  "allDataCleared": "تم مسح جميع البيانات بنجاح",
+  "errorClearingData": "خطأ في مسح البيانات: {error}",
+  "@errorClearingData": {
+    "placeholders": {
+      "error": {
+        "type": "String"
+      }
+    }
+  }
 }
